[package]
name = "robotbroker"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[lib]
name = "broker"
path = "src/lib.rs"

[[bin]]
name = "broker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
capnp = "0.14"
capnp-futures = "0.14"
capnp-rpc = "0.14"
futures = "0.3"
log = "0.4"
log4rs = "0.13.0"
prost = "0.6"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
tokio-util = { version = "0.6", features = ["compat"] }
tonic = "0.3"

[build-dependencies]
capnpc = "0.14"
tonic-build = "0.3"
