[package]
name = "robotbroker"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[lib]
name = "broker"
path = "src/lib.rs"

[[bin]]
name = "broker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = { version = "0.3", features = ["async-await"] }
log = "0.4"
log4rs = "0.13.0"
prost = "0.7"
rand = "0.8.2"
tempdir = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
