[package]
name = "broker_master"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
broker_protos = { version = "0.1.0", path = "../broker-protos" }
futures = { version = "0.3", features = ["async-await"] }
log = "0.4"
log4rs = "1.0"
prost = "0.7"
rand = "0.8.2"
robotbroker = { version = "0.1.0", path = "../robotbroker" }
tempdir = "0.3"
thiserror = "1.0"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
tonic = "0.4"
tower = "0.4"
