[package]
name = "robotbroker"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
broker_protos = { version = "0.1.0", path = "../broker-protos" }
futures = { version = "0.3", features = ["async-await"] }
log = "0.4"
prost = "0.7"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
tonic = "0.4"
tower = "0.4"
